--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6196,6 +6196,15 @@ ol ul {
   margin-bottom: 0;
 }
 
+.popup-mobile-menu .menu-header .logo img {
+  max-width: 100%;
+}
+
+.popup-mobile-menu .menu-header .logo img {
+  width: 80px;
+  height: 80px;
+}
+
 img {
   -ms-interpolation-mode: bicubic;
   border: 0;
@@ -6740,7 +6749,7 @@ input[type="radio"] ~ label::after {
 }
 
 .form-group {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 .form-group label {
   margin-bottom: 6px;
@@ -11171,6 +11180,16 @@ body.template-color-1 {
   justify-content: flex-start;
   display: flex;
 }
+
+.header-wrapper .header-left .logo img {
+  width: 60px;
+  height: 60px;
+}
+
+.header-wrapper .header-left .logo_name {
+  display: flex;
+  align-items: center;
+}
 .header-wrapper .header-center {
   flex-basis: 100%;
   justify-content: flex-end;
@@ -11411,7 +11430,7 @@ body.template-color-1 {
   }
 }
 .sticky .header-wrapper .logo img {
-  max-width: 90%;
+  max-width: 100%;
 }
 
 .logo a {
@@ -12291,6 +12310,7 @@ button.rn-btn {
   font-size: 14px;
   font-weight: 500;
   border: 0 none;
+  margin-top: 50px;
 }
 a.rn-btn::before,
 button.rn-btn::before {
@@ -12402,10 +12422,24 @@ button.rn-btn.thumbs-icon svg {
   left: 50%;
   opacity: 0.5;
 }
-
+.projectShow .button-group {
+  position: relative;
+}
 .button-group {
   margin: -15px;
 }
+
+.projectShow .button-group a {
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  transform: translate(70%, -150%);
+}
+
+.projectImage img {
+  width: 100%;
+}
+
 .button-group a.rn-btn {
   margin: 15px;
   transition: var(--transition);
@@ -12858,7 +12892,21 @@ figcaption {
   }
 }
 .slide .content .inner {
-  margin-bottom: 142px;
+  margin-bottom: 50px;
+}
+
+.CV {
+  display: flex;
+  margin-bottom: 50px;
+}
+.CV button {
+  padding: 10px;
+}
+
+.CV button:hover {
+  background-color: #ff014f;
+  color: #fff;
+  border: 1px solid #ff014f;
 }
 @media only screen and (max-width: 1199px) {
   .slide .content .inner {
@@ -15418,7 +15466,13 @@ div#featured-project-carousel {
   border-radius: 6px;
   background: var(--background-color-1);
   box-shadow: var(--shadow-1);
-  display: inline-block;
+  display: flex;
+}
+.testimonial .inner .card-description .title-area .rating .number-rating {
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  margin-top: 2px;
 }
 @media only screen and (max-width: 767px) {
   .testimonial .inner .card-description .title-area .rating {
@@ -15789,8 +15843,20 @@ div#featured-project-carousel {
   .rn-client-area .section-title {
     text-align: center !important;
   }
+  .hosting-services .carousel-cell {
+    width: 50%;
+    padding: 50px;
+    text-align: center;
+  }
 }
 
+@media only screen and (max-width: 479px) {
+  .hosting-services .carousel-cell {
+    width: 50% !important;
+    padding: 50px !important;
+    text-align: center !important;
+  }
+}
 .hosting-services .carousel {
   display: flex;
   margin-top: 30px;
@@ -16116,6 +16182,14 @@ span.sr-only {
 .navigation-wrapper {
   margin-left: 10px;
   box-shadow: var(--shadow-1);
+  max-width: 500px;
+  max-width: 500px;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .navigation-wrapper {
@@ -16125,6 +16199,7 @@ span.sr-only {
 @media only screen and (max-width: 767px) {
   .navigation-wrapper {
     margin: 0;
+    width: 400px;
   }
 }
 .navigation-wrapper ul {
@@ -16138,6 +16213,8 @@ span.sr-only {
   margin: 0;
   padding: 0;
   border: 0;
+  display: flex;
+  justify-content: center;
 }
 @media only screen and (max-width: 479px) {
   .navigation-wrapper ul.nav {
@@ -16151,35 +16228,13 @@ span.sr-only {
 .navigation-wrapper ul.nav li.recommended {
   position: relative;
 }
-.navigation-wrapper ul.nav li.recommended::after {
-  content: "";
-  right: 60px;
-  top: -23px;
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-top: 15px solid #545961;
-  z-index: 1;
-}
+
 @media only screen and (max-width: 479px) {
   .navigation-wrapper ul.nav li.recommended::after {
     display: none;
   }
 }
-.navigation-wrapper ul.nav li.recommended::before {
-  content: "Recommended";
-  position: absolute;
-  top: -50px;
-  right: 33px;
-  background: #545961;
-  padding: 5px 13px;
-  font-size: 12px;
-  border-radius: 30px;
-  color: #fff;
-  z-index: 2;
-}
+
 @media only screen and (max-width: 479px) {
   .navigation-wrapper ul.nav li.recommended::before {
     top: 5px;
@@ -16198,7 +16253,6 @@ span.sr-only {
 .navigation-wrapper ul.nav li a:hover,
 .navigation-wrapper ul.nav li a:focus,
 .navigation-wrapper ul.nav li a.active {
-  box-shadow: var(--shadow-1);
   color: var(--color-primary);
 }
 .navigation-wrapper .tab-content {
@@ -16250,14 +16304,23 @@ span.sr-only {
     margin-bottom: 25px;
   }
 }
+.rn-pricing .pricing-header .header-left {
+  width: 100%;
+}
+.rn-pricing .pricing-header .header-left span {
+  display: flex;
+  justify-content: center;
+}
 .rn-pricing .pricing-header .header-left h2.title {
-  font-size: 27px;
+  font-size: 6rem;
   color: var(--color-lightn);
   margin-bottom: 9px;
+  display: flex;
+  justify-content: center;
 }
 @media only screen and (max-width: 575px) {
   .rn-pricing .pricing-header .header-left h2.title {
-    font-size: 22px;
+    font-size: 5rem;
   }
 }
 .rn-pricing .pricing-header .header-left span {
@@ -16335,7 +16398,7 @@ span.sr-only {
 }
 @media only screen and (max-width: 575px) {
   .rn-pricing .pricing-body .check-wrapper .check p {
-    font-size: 13px;
+    font-size: 20px;
   }
 }
 @media only screen and (max-width: 479px) {
@@ -16345,7 +16408,7 @@ span.sr-only {
 }
 .rn-pricing .pricing-footer {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .rn-pricing .pricing-footer {
@@ -16385,13 +16448,13 @@ span.sr-only {
 }
 @media only screen and (max-width: 479px) {
   .rn-pricing .pricing-footer .time-line {
-    display: block !important;
     padding-left: 5px;
   }
 }
 .rn-pricing .pricing-footer .time-line .single-cmt {
   margin-right: 15px;
   display: flex;
+  text-align: center;
 }
 @media only screen and (max-width: 479px) {
   .rn-pricing .pricing-footer .time-line .single-cmt:nth-child(2) {
@@ -16704,6 +16767,8 @@ span.sr-only {
   }
 }
 .contact-about-area .thumbnail {
+  width: 100%;
+  height: 55%;
   margin-bottom: 28px;
   overflow: hidden;
   border-radius: 10px;
@@ -16861,7 +16926,7 @@ span.sr-only {
 .contact-form-wrapper input {
   background-color: #191b1e;
   border-radius: 6px;
-  height: 55px;
+  height: 60px;
   transition: var(--transition);
   border: 2px solid #191b1e;
   padding: 0 15px;
@@ -17631,6 +17696,10 @@ span.sr-only {
   color: var(--color-body);
   font-family: var(--font-primary);
 }
+
+.footer-area .description span i {
+  color: red;
+}
 .footer-area .description a {
   color: var(--color-body);
   transition: var(--transition);
@@ -17652,8 +17721,9 @@ span.sr-only {
 .footer-area .description a:hover::before {
   width: 100%;
 }
-.footer-area .logo a img {
-  max-height: 100px;
+.footer-area .logo img {
+  width: 80px;
+  height: 80px;
 }
 
 /*-----------------------
@@ -17930,7 +18000,11 @@ span.sr-only {
   font-size: 13px;
   transition: var(--transition);
 }
-.rn-portfolio .inner .content .category-info .meta span a i,
+.rn-portfolio .inner .content .category-info .meta a i {
+  margin-right: 2px;
+  font-size: 13px;
+  transition: var(--transition);
+}
 .rn-blog .inner .content .category-info .meta span a i {
   margin-right: 2px;
   font-size: 13px;
